--- a/day2/softwaredevelopment.html
+++ b/day2/softwaredevelopment.html
@@ -23,7 +23,7 @@
 
     <p>Contact us to discuss your software project requirements.</p>
 
-    <a href="index.html" class="btn btn-primary mt-3">Back to Services</a>
+    <a href="day2.html" class="btn btn-primary mt-3">Back to Services</a>
   </div>
 
 </body>
