--- a/day2/webdevelopment.html
+++ b/day2/webdevelopment.html
@@ -23,7 +23,7 @@
 
     <p>Reach out to us to create your next web project.</p>
 
-    <a href="index.html" class="btn btn-primary mt-3">Back to Services</a>
+    <a href="day2.html" class="btn btn-primary mt-3">Back to Services</a>
   </div>
 
 </body>
