--- a/day2/cloudinfrastructure.html
+++ b/day2/cloudinfrastructure.html
@@ -23,7 +23,7 @@
 
     <p>Contact us to learn how we can assist with your cloud transformation journey.</p>
 
-    <a href="index.html" class="btn btn-primary mt-3">Back to Services</a>
+    <a href="day2.html" class="btn btn-primary mt-3">Back to Services</a>
   </div>
 
 </body>
