--- a/day2/managementconsulting.html
+++ b/day2/managementconsulting.html
@@ -23,7 +23,7 @@
 
     <p>If you are interested in learning more about how we can help your organization, please contact us.</p>
 
-    <a href="index.html" class="btn btn-primary mt-3">Back to Services</a>
+    <a href="day2.html" class="btn btn-primary mt-3">Back to Services</a>
   </div>
 
 </body>
