git commit -m "msg" git remote add origin https://github.com/Bhav-dev-13/Aimaster-live.git git push -u origin master

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <a href="day2/day2.html">day2 task</a>
     <br>
     <br>
+    <a href="day2.1.html/main.html">day2 task</a>
+    <br>
+    <br>
    
 </body>
 </html>
